--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-app2",
   "version": "0.1.0",
-	"private": true,
-	"homepage": "./",
+  "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^5.1.0",
     "styled-px2vw": "^1.0.9"
   },
@@ -40,5 +41,6 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5"
-  }
+  },
+  "proxy": "http://fx.hekouxin.com"
 }
