--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.24",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
     "styled-components": "^5.1.0",
-    "styled-px2vw": "^1.0.9"
+    "styled-px2vw": "^1.0.9",
+    "vconsole": "^3.3.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
