feat: 增加微信分享功能

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+		"extends": "react-app",
+		"globals": {
+			"wx": true
+		}
   },
   "browserslist": {
     "production": [
